hphp/hack/test/typecheck/expression_trees/property_access_error3.php.exp
ERROR: File "property_access_error3.php", line 7, characters 13-19:
You are trying to access the property `my_prop` but this is an int (Typing[4373])
  File "property_access_error3.php", line 13, characters 92-101:
  Definition is here
